--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "mc-verifier"
+name = "mc-creation-date"
 version = "0.1.0"
 authors = ["Aaron Hill <aa1ronham@gmail.com>"]
 edition = "2018"
@@ -24,16 +24,7 @@ serde = { version = "1.0.94", features = ["derive"] }
 serde_json = "1.0.40"
 base64-serde = "0.3.2"
 base64 = "0.10.1"
-termimage = "0.4.0"
-image = "0.21.2"
 reqwest = "0.9.18"
 env_logger = "0.6.2"
 term_size = "0.3.1"
 chrono = "0.4.7"
-
-[dev-dependencies]
-criterion = "0.2.11"
-
-[[bench]]
-name = "creation_time"
-harness = false
