--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,11 @@ reqwest = "0.9.18"
 env_logger = "0.6.2"
 chrono = { version = "0.4.7", features = ["serde"] }
 failure = "0.1.5"
+rusoto_s3 = "0.40.0"
+rusoto_credential = "0.40.0"
+rusoto_core = "0.40.0"
+
+[patch.crates-io]
+rusoto_core = { git = "https://github.com/aaron1011/rusoto", branch = "feature/add-builder" }
+rusoto_s3 = { git = "https://github.com/Aaron1011/rusoto", branch = "feature/add-builder" }
+rusoto_credential = { git = "https://github.com/Aaron1011/rusoto", branch = "feature/add-builder" }
